--- a/Kandidathantering/Kandidathantering/nbproject/private/private.properties
+++ b/Kandidathantering/Kandidathantering/nbproject/private/private.properties
@@ -3,8 +3,8 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
 index.file=index.php
-remote.connection=Sandinfoto-d21a22
-remote.directory=/Kandidathantering
+remote.connection=Server-04f2a9
+remote.directory=/Strateg
 remote.upload=ON_RUN
 run.as=REMOTE
-url=https://www.sandinfoto.se/Kandidathantering/
+url=http://192.168.1.35:8080/Strateg/
