--- a/Kandidathantering/Kandidathantering/nbproject/private/private.properties
+++ b/Kandidathantering/Kandidathantering/nbproject/private/private.properties
@@ -3,8 +3,7 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
 index.file=index.php
-remote.connection=Server-04f2a9
-remote.directory=/Strateg
+remote.connection=Server__fj_rr_-b5cc29
 remote.upload=ON_RUN
 run.as=REMOTE
-url=http://192.168.1.35:8080/Strateg/
+url=http://server.sandinfoto.se:8080/Strateg/
