--- a/Kandidathantering/Kandidathantering/nbproject/private/private.properties
+++ b/Kandidathantering/Kandidathantering/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-browser.id=default
+browser.id=Chrome.INTEGRATED
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
 index.file=index.php
-remote.connection=Server__fj_rr_-b5cc29
+remote.connection=Sandinfoto-d21a22
 remote.upload=ON_RUN
 run.as=REMOTE
-url=http://server.sandinfoto.se:8080/Strateg/
+url=http://server.sandinfoto.se:8080/Jimmy/
