--- a/Kandidathantering/Kandidathantering/nbproject/private/private.properties
+++ b/Kandidathantering/Kandidathantering/nbproject/private/private.properties
@@ -2,8 +2,9 @@ browser.id=default
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
+debug.url=DEFAULT_URL
 index.file=index.php
-remote.connection=Server__fj_rr_-b5cc29
+remote.connection=Mattias_Kandidathantering-903b60
 remote.upload=ON_RUN
 run.as=REMOTE
-url=http://server.sandinfoto.se:8080/Strateg/
+url=http://server.sandinfoto.se:8080/Simon
