--- a/Kandidathantering/Kandidathantering/nbproject/private/private.properties
+++ b/Kandidathantering/Kandidathantering/nbproject/private/private.properties
@@ -2,7 +2,7 @@ browser.id=Chrome.INTEGRATED
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
-index.file=index.php
+index.file=site.php
 remote.connection=Sandinfoto-d21a22
 remote.upload=ON_RUN
 run.as=REMOTE
